# Gruntia

./: .gitignore  Cargo.toml  INPUT_SETUP.txt  README.md  README.txt  build.rs  icon.svg.import  project.godot
assets/ui/: alive.label  bag_button.label  balanced_deck.label  balanced_deck_desc.label  base_title.label  build_button.label  build_menu_title.label  buildings.label  campfire.label  cancel_button.label  capacity.label  card_attack.label  card_gather.label  card_move.label  card_search.label  character_title.label  close_button.label  combat_deck.label  combat_deck_desc.label  confirm_button.label  confirm_discard.label  confirm_quit.label  cost.label  cost_stone.label  death_characters.label  death_food.label  defense_stat.label  depart_block_capacity.label  depart_block_empty.label  depart_block_food.label  depart_button.label  discard_button.label  effect_gather.label  effect_move.label  empty_slot.label  expedition_bag_title.label  expedition_prep_title.label  explore_button.label  food_desc.label  food_icon_hint.label  (+50 more)
assets/windows/: gruntia.rc
config/: settings.json
data/: buildings.json  cards.json  technologies.json
docs/: REQUIREMENTS.md
scripts/: build-release.ps1  cargo-msvc.ps1  check.ps1  run.ps1
src/: app.rs  card.rs  data.rs  game.rs  main.rs  render.rs  save.rs
