[package]
name = "gruntia"
version = "0.1.0"
edition = "2021"
authors = ["xice-1201"]
description = "A lightweight 2D base-building and card-driven exploration demo."

[dependencies]
anyhow = "1.0"
minifb = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
